Configuring package executables
A package can expose some of its scripts as executables that can be run directly from the command line. The script or scripts must be listed in the executables entry of the pubspec file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,9 @@ description: svg_to_paint generates dart code from a svg file. Given an xml file
 version: 1.0.7
 homepage: https://github.com/FrancescoCatani/svg_to_paint_dart
 
+executables: 
+  svg_to_paint:
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
